# parse-it

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: test.yml
docs/: book.toml
docs/src/: SUMMARY.md  getting-started.md  intros.md
docs/src/blog/: calculus.md  parser-as-a-dsl.md
docs/theme/: index.hbs
parse-it/: Cargo.toml
parse-it-codegen/: Cargo.toml
parse-it-codegen/src/: backend.rs  frontend.rs  hash.rs  lib.rs  middle.rs  syntax.rs  utils.rs
parse-it-codegen/src/lexer/: backend.rs  frontend.rs  middle.rs
parse-it-codegen/src/parser/: backend.rs  frontend.rs  middle.rs
parse-it-macros/: Cargo.toml
parse-it-macros/src/: lib.rs
parse-it/examples/: brainfuck.rs  calc.rs  calc_logos.rs  json.rs  lexing.rs  sample.bf
parse-it/src/: arena.rs  combinator.rs  lexer.rs  lib.rs  memo.rs  parser.rs  primitive.rs  recursive.rs
