[package]
name = "parse-it-codegen"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "A user-friendly, opinionated parser generator for Rust."

[dependencies]
rustc-hash = { workspace = true }
hashlink = "0.10.0"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
regex-syntax = { workspace = true }
