[package]
name = "parse-it-macros"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "A user-friendly, opinionated parser generator for Rust."

[dependencies]
parse-it-codegen = { version = "0.2.0", path = "../parse-it-codegen" }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lib]
proc-macro = true
