[package]
name = "parse-it"
version = "0.3.0"
edition = "2021"
description = "A user-friendly, opinionated parser generator for Rust."
license = "Apache-2.0"

[dependencies]
parse-it-macros = { version = "0.1.2", path = "../parse-it-macros" }
rustc-hash = { workspace = true }
regex-automata = { workspace = true }
